# simple-dbus

./: .gitignore  CMakeLists.txt  main.cpp
